<resources>
    <string name="app_name">MKolay</string>
    <string name="migrostv">MİGROSTV</string>
    <string name="profile">PROFİL</string>
    <string name="mkolay">MKOLAY</string>
    <string name="migroskop">MİGROSKOP</string>
    <string name="homepage">ANASAYFA</string>
    <string name="mkolay_shop">Mkolay Mağaza ile ürünlerinizi kolayca \nokutun, <b>JetKasa</b> ile ödeyin.</string>
    <string name="mkolay_canteen">Mkolay Kantin ile ürünlerinizi kolayca okutun, \n<b>telefonunuzdan ödeyin</b></string>
    <string name="welcome">Hoş geldiniz.</string>
    <string name="qr_message">  Mkolay Kantin’e giriş yapabilmek için \n <b>QR kodu</b> turnikeye okutman gerekiyor.</string>
    <string name="qr_code">QR Code</string>
    <string name="shopping_history">Alışveriş \nGeçmişim</string>
    <string name="add_new_credit_card">Yeni Kart \nEkle</string>
    <string name="lorem_impsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</string>
    <string name="wish_well_shopping">İyi Alışverişler Dileriz</string>
    <string name="received_order">Alışverişin bize ulaştı.</string>
    <string name="can_see_in_shopping_history">Faturan oluştuğunda <b>Alışveriş geçmişim</b> kısmından görüntüleyebilirsin</string>
    <string name="return_homepage">Anasayfaya dön</string>
    <string name="paid_fee">Ödenen Tutar</string>
    <string name="negro">Eti Negro</string>
    <string name="price_with_symbol">%s &#x20BA;</string>
    <string name="price_with_turkish_lira">%s TL</string>
    <!--<string name="price_with_turkish_lira">%1$.2f TL</string>-->
    <string name="shopping_history_">Alışveriş Geçmişim</string>
    <string name="cart_total_fee">Sepet Tutarı</string>
    <string name="discount">İndirim</string>
    <string name="total_fee">Toplam Tutar</string>
    <string name="cart_summary">Sepet Özeti</string>
    <string name="quantatiy">%d Adet</string>
</resources>