<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/firstFragment"
        android:icon="@drawable/asm_ic_contact"
        android:title="@string/homepage" />
    <item
        android:id="@+id/secondFragment"
        android:icon="@drawable/asm_ic_contact"
        android:title="@string/migroskop" />
    <item
        android:id="@+id/thirdFragment"
        android:icon="@drawable/asm_ic_contact"
        android:title="@string/mkolay" />
    <item
        android:id="@+id/fourthFragment"
        android:icon="@drawable/asm_ic_contact"
        android:title="@string/migrostv" />
    <item
        android:id="@+id/fifthFragment"
        android:icon="@drawable/asm_ic_contact"
        android:title="@string/profile" />


</menu>